# card-game-rust

baloot-client/: Cargo.toml
baloot-client/src/: main.rs
baloot-common/: Cargo.toml
baloot-common/src/: lib.rs
baloot-server/: Cargo.toml
baloot-server/src/: main.rs
baloot-wa/: Cargo.toml  build.rs
baloot-wa/deploy/: baloot_wa.js  baloot_wa_bg.wasm  index.html  styles.css
baloot-wa/src/: lib.rs
