[package]
name = "baloot-wa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
baloot-common = { path = "../baloot-common" }
bincode = "*"
wasm-bindgen = "^0.2"
js-sys = "*"
console_error_panic_hook = "*"
lazy_static = "*"

[dependencies.web-sys]
version = "*"
features = [
    'AddEventListenerOptions',
    'Blob',
    'console',
    'Document',
    'DomTokenList',
    'Element',
    'EventTarget',
    'FileReader',
    'HtmlCollection',
    'HtmlElement',
    'HtmlButtonElement',
    'HtmlInputElement',
    'KeyboardEvent',
    'Location',
    'MessageEvent',
    'Node',
    'NodeList',
    'Performance',
    'PointerEvent',
    'ProgressEvent',
    'SvgElement',
    'SvgGraphicsElement',
    'SvgMatrix',
    'WebSocket',
    'Window',
]

[build-dependencies]
vergen = "3"
